[EFL][WK2] compositing/layer-creation/fixed-position-out-of-view-scaled.html is flaky https://bugs.webkit.org/show_bug.cgi?id=110059

Patch by Huang Dongsung <luxtella@company100.net> on 2013-02-18
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Remove the ASSERT check in TextureMapperLayer. This assertion seems
valid because CoordinatedGraphicsScene::adjustPositionForFixedLayers() calls
TextureMapperLayer::setScrollPositionDeltaIfNeeded() when the graphics
layer is a fixed position layer. However, the assertion can be failed
because it is possible that TextureMapperLayer is a non-fixed position
layer when the graphics layer that holds the TextureMapperLayer is a
fixed position layer. When CoordinatedGraphicsScene flushes,
TextureMapperLayer becomes a fixed position layer.

No new tests. No change in behavior.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::setScrollPositionDeltaIfNeeded):

LayoutTests:

Unskip two tests on EFL port. Now those pass.
compositing/layer-creation/fixed-position-out-of-view-scaled.html
compositing/layer-creation/fixed-position-out-of-view-scaled-scroll.html

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/128392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143194 268f45cc-cd09-0410-ab3c-d52691b4dbfc